# shuati

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  SKILL.md  pyproject.toml  requirements.txt
src/shuati/cli/: cli.py  context.py  exceptions.py  formatter.py  options.py
src/shuati/cli/commands/: generate.py  list.py  login.py  server.py  show.py  sync.py
src/shuati/core/: auth.py  config.py  database.py  date_utils.py  docgen.py  jielong_api.py  ocr_utils.py  question_parser.py  sync.py
src/shuati/web/: app.py
src/shuati/web/templates/: index.html  login.html
tests/: test_app.py  test_cli.py  test_database.py  test_date_utils.py  test_ocr_utils.py  test_question_parser.py
